Project dependencies config

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,20 @@ target 'castleFortressGame' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'RNAudio', :path => '../node_modules/react-native-audio'
+
+  pod 'RNSound', :path => '../node_modules/react-native-sound'
+
+  pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
+
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
+  pod 'RNScreens', :path => '../node_modules/react-native-screens'
+
+  pod 'react-native-safe-area-context', :path => '../node_modules/react-native-safe-area-context'
+
+  pod 'RNCMaskedView', :path => '../node_modules/@react-native-community/masked-view'
+
   target 'castleFortressGameTests' do
     inherit! :complete
     # Pods for testing
