--- a/ios/castleFortressGame.xcodeproj/xcshareddata/xcschemes/castleFortressGame.xcscheme
+++ b/ios/castleFortressGame.xcodeproj/xcshareddata/xcschemes/castleFortressGame.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "castleFortressGame.app"
+               BuildableName = "Castle Fortress.app"
                BlueprintName = "castleFortressGame"
                ReferencedContainer = "container:castleFortressGame.xcodeproj">
             </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "castleFortressGame.app"
+            BuildableName = "Castle Fortress.app"
             BlueprintName = "castleFortressGame"
             ReferencedContainer = "container:castleFortressGame.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "castleFortressGame.app"
+            BuildableName = "Castle Fortress.app"
             BlueprintName = "castleFortressGame"
             ReferencedContainer = "container:castleFortressGame.xcodeproj">
          </BuildableReference>
