--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "@reduxjs/toolkit": "^1.4.0",
+    "buffer": "^5.6.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-audio": "^4.3.0",
+    "react-native-audio-record": "^0.2.2",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-permissions": "^2.1.5",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.6",
     "react-native-screens": "^2.10.1",
