--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^8.3.1",
+    "@react-native-firebase/auth": "^9.0.0",
+    "@react-native-firebase/firestore": "^7.5.3",
+    "@react-native-firebase/functions": "^7.3.2",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "@reduxjs/toolkit": "^1.4.0",
@@ -20,6 +24,7 @@
     "react-native-audio": "^4.3.0",
     "react-native-audio-record": "^0.2.2",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-permissions": "^2.1.5",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.6",
