--- a/ios/Podfile
+++ b/ios/Podfile
@@ -42,6 +42,8 @@ target 'castleFortressGame' do
 
   pod 'RNFBFunctions', :path => '../node_modules/@react-native-firebase/functions'
 
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
+
   target 'castleFortressGameTests' do
     inherit! :complete
     # Pods for testing
