--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.63.2",
     "react-native-audio": "^4.3.0",
     "react-native-audio-record": "^0.2.2",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-permissions": "^2.1.5",
