--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "@reduxjs/toolkit": "^1.4.0",
+    "audiobuffer-to-wav": "^1.0.0",
+    "base-64": "^0.1.0",
     "buffer": "^5.6.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
