--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.0",
+    "@react-native-community/audio-toolkit": "^2.0.3",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/slider": "^3.0.3",
     "@react-native-firebase/app": "^8.3.1",
     "@react-native-firebase/auth": "^9.0.0",
     "@react-native-firebase/firestore": "^7.5.3",
